tests/NormalTests/paczka1/fuzzy1/33135706.err
Error in line 1: VFGp A625 46,3
Error in line 3: VFGp S391 0,0
Error in line 18: x4PzsTug A277 23,4
Error in line 26: ziyDan4 A972 44,6
Error in line 36: DQ7 A625 20,8
